# panda_traj

./: README.md
simple_franka_interface/: CMakeLists.txt  package.xml  simple_franka_interface_plugin.xml
simple_franka_interface/config/: simple_franka_interface.yaml
simple_franka_interface/include/: joint_velocity_interface.h
simple_franka_interface/launch/: real_time_traj_following.launch
simple_franka_interface/src/: joint_velocity_interface.cpp
trac_ik/trac_ik_examples/launch/: pr2_arm.launch
trac_ik/trac_ik_examples/src/: ik_tests.cpp
traj_generator/: CMakeLists.txt  package.xml
traj_generator/src/: example.cpp  traj_following.cpp
