<?xml version="1.0"?>
<package format="3">
  <name>traj_generator</name>
  <version>1.0.0</version>
  <description>trajectory generator</description>
  <maintainer email="zhengt1997@gmail.com">Zhengtong Xu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>osqp</depend>
  <depend>OsqpEigen</depend>
  
  <build_depend>boost</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend condition="$ROS_DISTRO != noetic">orocos_kdl</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</build_depend>
  <build_depend>libnlopt-dev</build_depend>
  <build_depend condition="$ROS_DISTRO == noetic">libnlopt-cxx-dev</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">liborocos-kdl</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>libnlopt-dev</exec_depend>
  <exec_depend>libnlopt0</exec_depend>
  <exec_depend>pr2_description</exec_depend>
 
</package>

